--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
     width: 100%;
     float: left;
     text-align: center;
-    color: #2e353d;
+    color: #094b96;
     font-size: 40px;
     font-weight: 300;
     margin-top: 63px;
@@ -63,7 +63,7 @@ body {
 }
 
 #content h3 {
-    color: #242424;
+    color: #00b9d1;
     font-size: 35px;
     font-weight: 300;
     text-align: left;
@@ -85,14 +85,14 @@ body {
 
 #content #box_text {
     width: 671px;
-    background-color: #ffffff;
+    background-color: #00d8a2;
     float: right;
     padding: 49px 48px 51px 76px;
     margin-bottom: 100px;
 }
 
 #content #box_text p {
-    color: #242424;
+    color: #2e0079;
     font-size: 24px;
     font-weight: 100;
     text-align: left;
@@ -131,8 +131,8 @@ body {
 }
 
 #content #box input {
-    border: 1px solid #a0a0a0;
-    background-color: #f5f5f5;
+    border: 1px solid #001aff;
+    background-color: #bd00f7;
     width: 457px;
     height: 34px;
     padding-left:10px;
@@ -144,8 +144,8 @@ body {
 #content #box a {
     display: block;
     float: left;
-    background-color:  #8cbbd3;
-    color:  #ffffff;
+    background-color:  #ffd102;
+    color:  #ff0707;
     font-size: 24px;
     font-weight: 300;
     text-align: center;
